Changed code layout to be more modifiable in the future, added new colour scheme, fixed markup validation issues, and improved spacing between sections.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,9 +2,31 @@
     scroll-behavior: smooth;
 }
 
+#intro {
+    background-color: #5c7887;
+}
+
+#aboutMe {
+
+}
+
+#education {
+
+}
+
+#workHistory {
+
+}
+
+#creation {
+}
+
+#contact {
+    background-color: white;
+}
+
 .bi {
     vertical-align: -.125em;
-    fill: currentColor;
 }
 
 .feature-icon {
@@ -15,21 +37,18 @@
     height: 4rem;
     margin-bottom: 1rem;
     font-size: 2rem;
-    color: #fff;
     border-radius: .75rem;
 }
 .icon-link {
     display: inline-flex;
     align-items: center;
 }
-
     .icon-link > .bi {
         margin-top: .125rem;
         margin-left: .125rem;
         transition: transform .25s ease-in-out;
         fill: currentColor;
     }
-
     .icon-link:hover > .bi {
         transform: translate(.25rem);
     }
@@ -42,12 +61,4 @@
     height: 3rem;
     font-size: 1.5rem;
     border-radius: .75rem;
-}
-
-.rounded-4 {
-    border-radius: .5rem;
-}
-
-.rounded-5 {
-    border-radius: 1rem;
 }
